examples/test/testpolicy19295.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19295
  namespace: namespace334
spec:
  podSelector:
    matchLabels:
      key44: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value43
          key1: value30
          key11: value5
      podSelector:
        matchLabels:
          key2: value7
          key47: value38
          key4: value48
